debathena-machtype (10.0.2-0debathena2) unstable; urgency=low

  * Functionalize logic for determining arch-specific sysnames.

 -- Evan Broder <broder@mit.edu>  Thu, 06 May 2010 19:03:50 -0400

debathena-machtype (10.0.2-0debathena1) unstable; urgency=low

  * Add machtype -q, which outputs whether or not a workstation is a
    quickstation.

 -- Evan Broder <broder@mit.edu>  Mon, 05 Oct 2009 15:12:58 -0400

debathena-machtype (10.0.1-0debathena5) unstable; urgency=low

  * Don't make the inability to successfully run fs (e.g., if AFS hasn't
    started yet, e.g., if we just unpacked AFS) fatal to installing this
    package.

 -- Geoffrey Thomas <geofft@mit.edu>  Wed, 26 Aug 2009 16:20:30 -0400

debathena-machtype (10.0.1-0debathena4) unstable; urgency=low

  * If AFS is installed, reload the sysname list when this package is
    installed or upgraded.

 -- Evan Broder <broder@mit.edu>  Thu, 20 Aug 2009 19:52:53 -0700

debathena-machtype (10.0.1-0debathena3) unstable; urgency=low

  * Remove some crufty (and likely incompatible) sysnames from the
    compatibility list.

 -- Evan Broder <broder@mit.edu>  Sat, 08 Aug 2009 19:08:54 -0700

debathena-machtype (10.0.1-0debathena2) unstable; urgency=low

  * Switch back to architecture: any - the sysnames are calculated at
    build time.

 -- Evan Broder <broder@mit.edu>  Wed, 01 Apr 2009 12:28:22 -0400

debathena-machtype (10.0.1-0debathena1) unstable; urgency=low

  * Add debathena-login-graphical to the list of metapackages we test for.
  * Switch to architecture: all

 -- Evan Broder <broder@mit.edu>  Wed, 01 Apr 2009 12:13:45 -0400

debathena-machtype (10.0.0-0debathena5) unstable; urgency=low

  * machtype -L outputs "debathena" if no metapackages are installed,
    instead of "linux".

 -- Evan Broder <broder@mit.edu>  Thu, 05 Mar 2009 17:38:20 -0500

debathena-machtype (10.0.0-0debathena4) unstable; urgency=low

  * Change `machtype -E` and `machtype -L` to output more informative
    information.
