@@ -1,8 +1,9 @@
 debathena-machtype (10.0.2-0debathena2) unstable; urgency=low
 
   * Functionalize logic for determining arch-specific sysnames.
+  * Add appropriate sysnames for Ubuntu releases.
 
- -- Evan Broder <broder@mit.edu>  Thu, 06 May 2010 19:03:50 -0400
+ -- Evan Broder <broder@mit.edu>  Thu, 06 May 2010 19:32:22 -0400
 
 debathena-machtype (10.0.2-0debathena1) unstable; urgency=low
 
